--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && copy .\\src\\index.html .\\dist /y",
+    "build": "rd /q /s .\\dist && tsc && copy .\\src\\index.html .\\dist /y && xcopy /e /i .\\src\\static .\\dist\\static",
     "start": "http-server ./dist -o"
   },
   "keywords": [],
